# QSC_Numerics

./: .gitignore  CLAUDE.md  QSC_SOLVER_IMPLEMENTATION_GUIDE.md  discussion_AI.md  pyproject.toml
data/: delta_predictor.npz  delta_predictor_v2.npz  konishi_all_solutions.npz  konishi_dense_scan.npz  konishi_dense_v2.npz  konishi_from_g02.npz  konishi_solutions.npz
qsc/: __init__.py  arclength.py  chebyshev.py  continuation.py  forward_map.py  forward_map_flint.py  forward_map_mp.py  hybrid_solve.py  io_utils.py  ml_predictor.py  newton.py  newton_mp.py  perturbative.py  pulldown_mp.py  quantum_numbers.py  spectral_q.py  zhukovsky.py
reference/: READING_NOTES.md
scripts/: bootstrap_scan.py  dense_scan_and_train.py  dense_scan_mpmath.py  generate_training_data.py  scan_konishi.py  scan_konishi_mp.py  test_basin.py
tests/: test_forward_map.py
tests/fixtures/: extract_reference_data.py  konishi_converged_g01.json  konishi_cpp_g02.json  konishi_cpp_internal.json  konishi_internal_params.json  konishi_perturbative.json  reference_spectral_data.json  run_konishi_reference.wls
