[project]
name = "qsc-fast"
version = "0.1.0"
description = "Accelerated Quantum Spectral Curve solver for planar N=4 SYM"
requires-python = ">=3.10"
dependencies = [
    "jax[cpu]>=0.4.20",
    "jaxlib>=0.4.20",
    "numpy>=1.24",
    "scipy>=1.11",
    "mpmath>=1.3",
    "matplotlib>=3.7",
    "tqdm>=4.65",
]

[project.optional-dependencies]
dev = ["pytest", "jupyter", "ruff"]
cuda = ["jax[cuda12]>=0.4.20"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
